# command-line-applications-rust

./: Cargo.toml
src/: lib.rs  main.rs  test.rs
tests/: cli.rs
